# PyWebService

./: .gitignore  .pylintrc  Makefile  README.md  database.py  enums.py  init_db.py  main.py  pyproject.toml  shemas.py  test_db.py
.github/workflows/: codeql.yml  pylint.yml
