[tool.poetry]
name = "pywebservice"
version = "0.1.0"
description = "Учебный сервис на FastAPI с примерами эндпоинтов для постов и пользователей"
authors = ["Evdokimov Kirill <kirillprof@ya.ru>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "*.py" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.0"
uvicorn = { version = "^0.38.0", extras = ["standard"] }

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"

[tool.pylint.'MAIN']
# Allow running `poetry run pylint` without separate rcfile for now
ignore-patterns = [".venv"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
