[tool.poetry]
name = "pywebservice"
version = "0.1.0"
description = "Учебный сервис на FastAPI с примерами эндпоинтов для постов и пользователей"
authors = ["Evdokimov Kirill <kirillprof@ya.ru>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "*.py" }]

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.120.4"
uvicorn = { version = "^0.38.0", extras = ["standard"] }
requests = "^2.32.5"
sqlalchemy = "^2.0.44"
psycopg = "^3.2.3"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"

[tool.pylint.'MAIN']
# Allow running `poetry run pylint` without separate rcfile for now
ignore-patterns = [".venv"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"